# amazon-kinesis-video-streams-demos

webrtc-c/: CMakeLists.txt  CanaryStreamUtils.cpp  CanaryStreamUtils.h  Common.c  KvsWebRtcSampleCloudwatchMaster.c
